--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/SachaSkinner/NodeJS-project/issues"
   },
-  "homepage": "https://github.com/SachaSkinner/NodeJS-project#readme"
+  "homepage": "https://github.com/SachaSkinner/NodeJS-project#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  },
+  "devDependencies": {}
 }
